Added ability to create VM

--- a/nutanix/graphical-api-demo/composer.json
+++ b/nutanix/graphical-api-demo/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "~5.0"
+        "guzzlehttp/guzzle": "~5.0",
+        "phpoffice/phpword": "dev-master"
     }
 }
